[package]
name = "gpu-testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.12.3"
cacao = "0.3.2"
env_logger = "0.10.0"
log = "0.4.17"
pollster = "0.2.5"
wasm-bindgen = "0.2.83"
wgpu = "0.14.2"
winit = "0.27.5"
